Triupathi- added project

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
-<h1>
-  {{title}}
-</h1>
+<nav>
+  <ul class="custom-nav">
+    <li><a routerLink="">Home-Registration</a></li>
+    <li><a routerLink="futureapps">New Apps</a></li>
+    <li><a routerLink="newsfeed">News Feed</a></li>
+  </ul>
+</nav>
+<router-outlet></router-outlet>
